backup-manager (0.7.8-2) UNRELEASED; urgency=low

  * New maintainer (Closes: #536155).
  * Add missing build dependencies (Closes: #516060).
  * Switch to quilt from dpatch.
    - Don't make any direct changes outside debian/ .
    - Add a short README.source as recommended by policy.
  * Upgrade Standards-Version to 3.8.2, no further changes needed.
  * Add Homepage field to debian/control.
  * Add debian/watch file.
  * Remove obsolete XS-Vcs-Svn field from debian/control.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 09 Jul 2009 15:06:48 +0200

backup-manager (0.7.8-1) unstable; urgency=low

  * New upstream release
    (closes: #461512, #494833, #496051, #482087, #482089)
  * Changed dependency from mkisofs to genisoimage; changed lib/externals.sh
    accordingly.

 -- Alexis Sukrieh <sukria@debian.org>  Sun, 01 Feb 2009 14:09:03 +0000

backup-manager (0.7.7-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix pending l10n issues
  * Programs translations:
    - German upstream translation updated. Closes: #499667
  * Debconf translations:
    - Swedish. Closes: #492245
    - Portuguese. Closes: #372232
    - Russian. Closes: #499440

 -- Christian Perrier <bubulle@debian.org>  Mon, 22 Sep 2008 07:27:15 +0200

backup-manager (0.7.7-1) unstable; urgency=low

  * New upstream release: 0.7.7
    - Handles missing destination directory during SSH uploads
      (closes: #459266)
    - Other bugfixes unreported in the Debian BTS.
  * Removed obsolete patches.
  * Standard-Version set to 3.7.3

 -- Alexis Sukrieh <sukria@debian.org>  Tue, 15 Apr 2008 14:09:19 +0200

backup-manager (0.7.6-3) unstable; urgency=high

  * Backport from the stable upstream branch for closing a security issue
    (password disclosure during FTP uploads).
    (closes: #439392)

 -- Alexis Sukrieh <sukria@debian.org>  Thu, 30 Aug 2007 18:24:14 +0200

backup-manager (0.7.6-2) unstable; urgency=low

  * The backup-manager-doc package now installs the documentation files under