@@ -1,0 +1,1 @@
+backup-manager: script-not-executable ./usr/share/backup-manager/backup-manager.cron.tpl
